--- a/FlightSimulatorReactionTester.UI/FlightSimulatorReactionTester.UI.csproj
+++ b/FlightSimulatorReactionTester.UI/FlightSimulatorReactionTester.UI.csproj
@@ -73,6 +73,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SquareIndicatorWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SquareIndicatorWindow.Designer.cs">
+      <DependentUpon>SquareIndicatorWindow.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="SettingsWindow.resx">
       <DependentUpon>SettingsWindow.cs</DependentUpon>
     </EmbeddedResource>
