Added FutureEventSets directory from which all FutureEventSets will be selected

--- a/FlightSimulatorReactionTester.UI/FlightSimulatorReactionTester.UI.csproj
+++ b/FlightSimulatorReactionTester.UI/FlightSimulatorReactionTester.UI.csproj
@@ -95,6 +95,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SquareIndicatorWindow.resx">
+      <DependentUpon>SquareIndicatorWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -119,11 +122,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="FutureEventSets\FES.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Images\arrow_down.png" />
     <Content Include="Images\arrow_left.png" />
     <Content Include="Images\arrow_right.png" />
     <Content Include="Images\arrow_up.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
