--- a/TCP/TCP_Reader/TCP_Reader/TCP_Reader.csproj
+++ b/TCP/TCP_Reader/TCP_Reader/TCP_Reader.csproj
@@ -49,6 +49,7 @@
     <Compile Include="IDataProvider.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TCPReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
