Replaced _ with . in TCP_Writer and TCP_Reader, added TCP.Common class library and moved all the logic of handling TCP communication there

--- a/TCP/TCP.Reader/TCP.Reader/TCP.Reader.csproj
+++ b/TCP/TCP.Reader/TCP.Reader/TCP.Reader.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6DD23349-6B0C-42A2-951E-E18ECCD90A87}</ProjectGuid>
+    <ProjectGuid>{DB2D4978-3149-4DD7-8465-5D9875D939C3}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TCP_Writer</RootNamespace>
-    <AssemblyName>TCP_Writer</AssemblyName>
+    <RootNamespace>TCP.Reader</RootNamespace>
+    <AssemblyName>TCP.Reader</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,6 +49,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\TCP.Common\TCP.Common.csproj">
+      <Project>{f31b5faf-2126-4cba-aa66-9144ccfc5a3d}</Project>
+      <Name>TCP.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
