--- a/TCP/TCP.Writer/TCP.Writer/TCP.Writer.csproj
+++ b/TCP/TCP.Writer/TCP.Writer/TCP.Writer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DB2D4978-3149-4DD7-8465-5D9875D939C3}</ProjectGuid>
+    <ProjectGuid>{6DD23349-6B0C-42A2-951E-E18ECCD90A87}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TCP_Reader</RootNamespace>
-    <AssemblyName>TCP_Reader</AssemblyName>
+    <RootNamespace>TCP.Writer</RootNamespace>
+    <AssemblyName>TCP.Writer</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -34,7 +34,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,12 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataProvider.cs" />
-    <Compile Include="Header.cs" />
-    <Compile Include="IDataProvider.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TCPReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
