Changed folder structure of TCP.Reader and TCP.Writer, removed unnecesary solutions

--- a/TCP/TCP.Reader/TCP.Reader.csproj
+++ b/TCP/TCP.Reader/TCP.Reader.csproj
@@ -51,7 +51,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\TCP.Common\TCP.Common.csproj">
+    <ProjectReference Include="..\TCP.Common\TCP.Common.csproj">
       <Project>{f31b5faf-2126-4cba-aa66-9144ccfc5a3d}</Project>
       <Name>TCP.Common</Name>
     </ProjectReference>
