--- a/FlightSimulatorReactionTester.UI/App.config
+++ b/FlightSimulatorReactionTester.UI/App.config
@@ -1,5 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <appSettings>
+    <add key="Hostname" value="127.0.0.1" />
+    <add key="Port" value="5678" />
+    <add key="SamplesToRead" value="0"/>
+    <add key="RetryTimes" value="30"/>
+    <add key="SleepSeconds" value="1"/>
+    <add key="OutputFile" value=".\output.csv"/>
+  </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
