Added header to csv files with eeg data, increased amount of chunks that were captured after last event in simulation

--- a/TCP/TCP.Reader/App.config
+++ b/TCP/TCP.Reader/App.config
@@ -7,6 +7,7 @@
     <add key="RetryTimes" value="30"/>
     <add key="SleepSeconds" value="1"/>
     <add key="OutputFile" value=".\output.csv"/>
+    <add key="EEG_CSV_Header" value="AF3;F7;F3;FC5;T7;P7;O1;O2;P8;T8;FC6;F4;F8;AF4;ArrowState;Sampling Rate"/>
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
